...
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/publicBar"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/user_group" />

            <ImageView
                android:id="@+id/policeBar"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:adjustViewBounds="false"
                android:cropToPadding="true"
...
