...
            android:textAllCaps="false"
            android:textColor="#2b5fb2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="User ID"
            android:inputType="textPersonName"
...
